# rcpch-guidelines-rag

./: .gitignore  README.md  docker-compose.yml
.cursor/rules/: overview.mdc
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  scraper.py
backend/src/: constants.py  logger.py  main.py  models.py  scraper.py  vector_db.py
backend/src/data/: nice_pdfs.json  rcpch_guidelines_links.json
backend/src/data/links/: rcpch_guidelines_links.json
backend/src/data/sub_dirs/: .txt  acb.txt  bbuk.txt  brit-thoracic.txt  bsaci.txt  cclg.txt  chelwest.txt  dsmig.txt  headsmart.txt  nice.txt  rcog.txt  rcophth.txt  rcot.txt  rcpch.txt  rcpsych.txt  rcr.txt  resus.txt  sign.txt  ukkidney.txt
backend/src/parsers/: nice.py  nice_pdf_parser.py
backend/src/scrapers/: nice.py  scraper.py
rcpch-guidelines-rag/: docker-compose.yml  overview.mdc
s/: up
