[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "openai>=1.79.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 100
exclude = [".venv", "venv", "env", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W191"]

[tool.ruff.format]
indent-style = "tab"

[dependency-groups]
dev = ["ruff>=0.11.10"]
