[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.10",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "openai>=1.79.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "unstructured[pdf]>=0.17.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
exclude = [".venv", "venv", "env", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W191"]

[tool.ruff.format]
indent-style = "tab"

[dependency-groups]
dev = ["ruff>=0.11.10"]
